--- a/programs.cfg
+++ b/programs.cfg
@@ -2,7 +2,7 @@
     ["auto-altar"] = {
         name = "auto-altar",
         description = "A script which automates a blood magic altar",
-        authors = "Recursive Pineapple",
+        authors = "J65043",
         note = "See https://github.com/RecursivePineapple/auto-altar/blob/master/README.md for installation and setup details.",
         hidden = false,
         repo="tree/master/README.md",
